# langchain-strands-aws-comparison

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_server/: __init__.py  app.py  auth.py  config.py  display_tools.py  events.py  observability.py  sessions.py  streaming.py  ui_emitter.py
agents/langchain-agent/: .env.template  __init__.py
agents/langchain_agent/: agent.py  main.py  prompts.py
agents/strands-agent/: .env.template  main.py
agents/strands-agent/utils/: prompts.py  utils.py
agents/strands_agent/: .env.template  agentcore_runtime.py  main.py  requirements-agentcore.txt
agents/strands_agent/utils/: tools.py  utils.py
agents/strands_glue_pipeline_agent/: .dockerignore  .env.template  Dockerfile  README.md  agent.py  agentcore_runtime.py  default_python_shell_job.py  main.py  requirements-agentcore.txt  setup_glue_job_prereqs.sh
agents/strands_glue_pipeline_agent/server/: main.py
agents/strands_glue_pipeline_agent/skills/athena-query-execution/: SKILL.md
agents/strands_glue_pipeline_agent/skills/glue-python-shell-job/: SKILL.md
agents/strands_glue_pipeline_agent/skills/project-structure/: SKILL.md
agents/strands_glue_pipeline_agent/skills/s3-raw-data-ingestion/: SKILL.md
agents/strands_glue_pipeline_agent/skills/sandbox-artifacts/: SKILL.md
agents/strands_glue_pipeline_agent/target_repo_template/: .gitignore  README.md  glue-jobs.yaml
agents/strands_glue_pipeline_agent/target_repo_template/deploy/: deploy.py
agents/strands_glue_pipeline_agent/target_repo_template/jobs/example_python_shell/: entrypoint.py  pyproject.toml
agents/strands_glue_pipeline_agent/target_repo_template/jobs/example_python_shell/src/example_python_shell/: main.py
agents/strands_glue_pipeline_agent/target_repo_template/jobs/example_python_shell/tests/: test_main.py
agents/strands_glue_pipeline_agent/target_repo_template/scripts/: bootstrap_ci_iam.sh
agents/strands_glue_pipeline_agent/utils/: hooks.py  prompts.py  tools.py  utils.py
frontend/: .dockerignore  .env.template  Dockerfile  app.py  chainlit.md  entrypoint.py
infra/: README.md  app.py  cdk.json
infra/librechat/: docker-compose.override.yaml  librechat.yaml
infra/policies/: README.md  strands_glue_pipeline_access.json
infra/stacks/: auth.py  compute.py  data.py  ecr.py  network.py
scripts/: agentcore_adapter_daemon.sh  agentcore_openai_adapter.py  bootstrap.sh  deploy.sh  deploy_strands_agentcore.sh  librechat_agentcore_stack.sh  run_agent_local.sh  run_frontend_local.sh  run_local_stack.sh  setup_librechat.sh  start_agentcore_openai_adapter.sh  teardown_dev_stack.sh  upload_iris_data.py  upload_sample_data.py
scripts/local_stack/: chainlit_schema.sql
tests/strands_agent/: conftest.py  test_golden_regressions.py  test_main_smoke.py  test_tools.py
tests/strands_glue_pipeline_agent/: conftest.py  test_tools.py
(+1 files in other folders)
