[project]
name = "langchain-strands-aws-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awswrangler>=3.0.0",
    "bedrock-agentcore>=1.3.1",
    "boto3>=1.42.54",
    "deepagents>=0.4.3",
    "jupyterlab>=4.5.4",
    "mcp>=1.26.0",
    "pandas<3.0.0",
    "scikit-learn>=1.8.0",
    "strands-agents>=1.27.0",
    "strands-agents-tools>=0.2.21",
]
