[project]
name = "langchain-strands-aws-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awswrangler>=3.0.0",
    "bedrock-agentcore>=1.3.1",
    "bedrock-agentcore-starter-toolkit>=0.3.2",
    "boto3>=1.42.54",
    "deepagents>=0.4.3",
    "jupyterlab>=4.5.4",
    "langchain>=1.2.10",
    "langchain-aws>=1.0.0",
    "langchain-daytona>=0.0.2",
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.26.0",
    "pandas<3.0.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.8.0",
    "strands-agents>=1.34.0",
    "strands-agents-tools>=0.2.21",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "httpx>=0.27.0",
    "chainlit>=2.11.1",
    "plotly>=6.7.0",
    "openinference-instrumentation-bedrock>=0.1.35",
    "asyncpg>=0.31.0",
    "sqlalchemy>=2.0.49",
    "greenlet>=3.5.0",
    "awslabs-aws-dataprocessing-mcp-server>=0.1.29",
    "awslabs-aws-api-mcp-server>=1.3.33",
]

[dependency-groups]
dev = [
    "aws-cdk-lib>=2.251.0",
    "constructs>=10.6.0",
    "pytest>=8.4.2",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
