[build-system]
requires = ["setuptools>=74", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example_python_shell"
version = "0.1.0"
description = "Reference Glue Python Shell job."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
